Revert vue-tag to fix tracking https://github.com/MatteoGabriele/vue-gtag/issues/604 Use gtag env variables

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         environment: "<%= VUE_APP_ENVIRONMENT %>",
         serviceUrl: "<%= VUE_APP_SERVICE_URL %>",
         authUrl: "<%- VUE_APP_AUTH_URL %>",
+        gtagId: "<%- VUE_APP_GTAG_ID %>",
+        gtagEnabled: "<%- VUE_APP_GTAG_ENABLED %>",
       };
       window.data = {};
     </script>
