--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
     <link href="<%= BASE_URL %>meta/52.png" rel="apple-touch-icon-precomposed" sizes="57x57">
     <link href="<%= BASE_URL %>meta/72.png" rel="apple-touch-icon" sizes="72x72"> -->
 
-    <link
-      rel="alternate icon"
-      href="<%= BASE_URL %>favicon.ico"
-      type="image/x-icon"
-    />
-    <link rel="icon" href="<%= BASE_URL %>imgs/icon.svg" type="image/svg+xml" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" sizes="48x48" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.svg" sizes="any"  type="image/svg+xml" />
 
     <meta
       name="theme-color"
