Add lt and ee translations

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         authUrl: "<%- VUE_APP_AUTH_URL %>",
         gtagId: "<%- VUE_APP_GTAG_ID %>",
         gtagEnabled: "<%- VUE_APP_GTAG_ENABLED %>",
+        defaultLanguage: "<%- VUE_APP_DEFAULT_LANGUAGE %>",
       };
       window.data = {};
     </script>
